--- a/Res/Localization/en.txt
+++ b/Res/Localization/en.txt
@@ -1,4 +1,19 @@
 language=English
-play=PLAY
-settings=SETTINGS
-quit=QUIT
+play=Play
+settings=Settings
+quit=Quit
+back=Back
+switchSound=Sound
+resetProgress=Reset progress
+confirmResetProgress=Progress will be reset. Are you sure?
+no=No
+yes=Yes
+levelCompleted=Level Completed!
+levelNotCompleted=Level not complited...
+menu=Menu
+next=Next
+retry=Retry
+level=LVL
+quitLevel=Quit level?
+cancel=No
+confirm=Yes
