--- a/Res/Localization/ru.txt
+++ b/Res/Localization/ru.txt
@@ -1,4 +1,19 @@
 language=Russian
-play=ИГРАТЬ
-settings=НАСТРОЙКИ
-quit=ВЫЙТИ
+play=Играть
+settings=Настройки
+quit=Выйти
+back=Назад
+switchSound=Звук
+resetProgress=Сбросить прогресс
+confirmResetProgress=Прогресс будет сброшен. Вы уверены?
+no=Нет
+yes=Да
+levelCompleted=Уровень пройден!
+levelNotCompleted=Уровень не пройден...
+menu=Меню
+next=Дальше
+retry=Заново
+level=УР.
+quitLevel=Покинуть уровень?
+cancel=Нет
+confirm=Да
