Всякие мелкие правки

--- a/Assets/Resources/Localization/ru.txt
+++ b/Assets/Resources/Localization/ru.txt
@@ -4,7 +4,7 @@ settings=Настройки
 quit=Выйти
 back=Назад
 switchSound=Звук
-resetProgress=Сбросить прогресс
+resetProgress=Сброс
 confirmResetProgress=Прогресс будет сброшен. Вы уверены?
 no=Нет
 yes=Да
