--- a/Res/Localization/en.txt
+++ b/Res/Localization/en.txt
@@ -4,7 +4,7 @@ settings=Settings
 quit=Quit
 back=Back
 switchSound=Sound
-resetProgress=Reset progress
+resetProgress=Reset
 confirmResetProgress=Progress will be reset. Are you sure?
 no=No
 yes=Yes
