Добавил фоновую музыку, а также добавил в опции возможность отключать отдельно музыку и звуки

--- a/Assets/Resources/Localization/en.txt
+++ b/Assets/Resources/Localization/en.txt
@@ -4,6 +4,7 @@ settings=Settings
 quit=Quit
 back=Back
 switchSound=Sound
+switchMusic=Music
 resetProgress=Reset
 confirmResetProgress=Progress will be reset. Are you sure?
 no=No
