--- a/Assets/Resources/Localization/ru.txt
+++ b/Assets/Resources/Localization/ru.txt
@@ -3,7 +3,8 @@ play=Играть
 settings=Настройки
 quit=Выйти
 back=Назад
-switchSound=Звук
+switchSound=Звуки
+switchMusic=Музыка
 resetProgress=Сброс
 confirmResetProgress=Прогресс будет сброшен. Вы уверены?
 no=Нет
