Исправлена ошибка в локализации

--- a/Assets/Resources/Localization/en.txt
+++ b/Assets/Resources/Localization/en.txt
@@ -10,7 +10,7 @@ confirmResetProgress=Progress will be reset. Are you sure?
 no=No
 yes=Yes
 levelCompleted=Level Completed!
-levelNotCompleted=Level not complited...
+levelNotCompleted=Level not completed...
 menu=Menu
 next=Next
 retry=Retry
